[gd_scene load_steps=21 format=2]

[ext_resource path="res://Levels/Level_End.gd" type="Script" id=1]
[ext_resource path="res://Mates/Mate1.gd" type="Script" id=2]
[ext_resource path="res://Players/Player.gd" type="Script" id=3]
[ext_resource path="res://Mates/Mate1.png" type="Texture" id=4]
[ext_resource path="res://light.png" type="Texture" id=5]
[ext_resource path="res://Music and Sounds/lvl1tuto.ogg" type="AudioStream" id=6]
[ext_resource path="res://Players/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://Levels/Level1.tres" type="TileSet" id=8]
[ext_resource path="res://Levels/level1.gd" type="Script" id=9]
[ext_resource path="res://UI/Turns_left.tscn" type="PackedScene" id=10]
[ext_resource path="res://Players/Torch.gd" type="Script" id=11]
[ext_resource path="res://addons/dialogic/Other/DialogicClass.gd" type="Script" id=12]
[ext_resource path="res://Levels/DarkEffect.tscn" type="PackedScene" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23.864, 11.8314 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17.578, 7.29833 )

[sub_resource type="OccluderPolygon2D" id=3]
cull_mode = 2
polygon = PoolVector2Array( 94.761, 135.139, 142.304, 135.139, 142.317, 146.905, 116.94, 146.843, 94.3236, 146.787 )

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( 112.056, 191.122, 112.056, 455.122, 272.056, 455.122, 272.056, 191.122, 208.056, 191.122, 208.056, 215.122, 208.056, 287.122, 256.056, 287.122, 256.056, 263.122, 224.056, 263.122, 224.056, 215.122, 256.056, 215.122, 256.056, 431.122, 144.056, 431.122, 144.056, 431.122, 144.056, 431.122, 128.056, 431.122, 128.056, 215.122, 160.056, 215.122, 160.056, 263.122, 128.056, 263.122, 128.056, 287.122, 176.056, 287.122, 176.056, 191.122, 208.056, 191.122, 208.056, 167.122, 176.056, 167.122, 176.056, 191.122 )

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( 304.056, 191.122, 304.056, 455.122, 464.056, 455.122, 464.056, 191.122, 400.056, 191.122, 400.056, 215.122, 448.056, 215.122, 448.056, 263.122, 416.056, 263.122, 416.056, 287.122, 448.056, 287.122, 448.056, 431.122, 320.056, 431.122, 320.056, 215.122, 352.056, 215.122, 352.056, 263.122, 320.056, 263.122, 320.056, 287.122, 368.056, 287.122, 368.056, 191.122, 400.056, 191.122, 400.056, 167.122, 368.056, 167.122, 368.056, 191.122 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16.7905, 11.7856 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 7.39072, 10 )

[node name="Level1" type="Node2D"]
position = Vector2( 0.0480347, -5.656 )
script = ExtResource( 9 )

[node name="Map" type="StaticBody2D" parent="."]
position = Vector2( 24.9584, -63.919 )

[node name="TileMap" type="TileMap" parent="Map"]
tile_set = ExtResource( 8 )
cell_size = Vector2( 16, 24 )
format = 1
tile_data = PoolIntArray( 196606, 2, 0, 196607, 2, 0, 131072, 2, 0, 131073, 2, 0, 131074, 2, 0, 131075, 2, 0, 131076, 2, 0, 131077, 2, 0, 131078, 2, 0, 131079, 2, 0, 131080, 2, 0, 131081, 2, 0, 131082, 2, 0, 131083, 2, 0, 131084, 2, 0, 131085, 2, 0, 131086, 2, 0, 131087, 2, 0, 131088, 2, 0, 131089, 2, 0, 131090, 2, 0, 131091, 2, 0, 131092, 2, 0, 131093, 2, 0, 131094, 2, 0, 131095, 2, 0, 131096, 2, 0, 131097, 2, 0, 131098, 2, 0, 131099, 2, 0, 131100, 2, 0, 131101, 2, 0, 131102, 2, 0, 131103, 2, 0, 131104, 2, 0, 131105, 2, 0, 131106, 2, 0, 131107, 2, 0, 131108, 2, 0, 131109, 2, 0, 262142, 2, 0, 262143, 2, 0, 196608, 2, 0, 196609, 2, 0, 196610, 2, 0, 196611, 2, 0, 196612, 2, 0, 196613, 2, 0, 196614, 2, 0, 196615, 2, 0, 196616, 2, 0, 196617, 2, 0, 196618, 2, 0, 196619, 2, 0, 196620, 2, 0, 196621, 2, 0, 196622, 2, 0, 196623, 2, 0, 196624, 2, 0, 196625, 2, 0, 196626, 2, 0, 196627, 2, 0, 196628, 2, 0, 196629, 2, 0, 196630, 2, 0, 196631, 2, 0, 196632, 2, 0, 196633, 2, 0, 196634, 2, 0, 196635, 2, 0, 196636, 2, 0, 196637, 2, 0, 196638, 2, 0, 196639, 2, 0, 196640, 2, 0, 196641, 2, 0, 196642, 2, 0, 196643, 2, 0, 196644, 2, 0, 196645, 2, 0, 327678, 2, 0, 327679, 2, 0, 262144, 2, 0, 262145, 2, 0, 262146, 2, 0, 262147, 2, 0, 262148, 2, 0, 262149, 2, 0, 262150, 2, 0, 262151, 2, 0, 262152, 2, 0, 262153, 2, 0, 262154, 2, 0, 262155, 2, 0, 262156, 2, 0, 262157, 2, 0, 262158, 2, 0, 262159, 2, 0, 262160, 2, 0, 262161, 2, 0, 262162, 2, 0, 262163, 2, 0, 262164, 2, 0, 262165, 2, 0, 262166, 2, 0, 262167, 2, 0, 262168, 2, 0, 262169, 2, 0, 262170, 2, 0, 262171, 2, 0, 262172, 2, 0, 262173, 2, 0, 262174, 2, 0, 262175, 2, 0, 262176, 2, 0, 262177, 2, 0, 262178, 2, 0, 262179, 2, 0, 262180, 2, 0, 262181, 2, 0, 393214, 2, 0, 393215, 2, 0, 327680, 2, 0, 327681, 2, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 0, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0, 327688, 2, 0, 327689, 2, 0, 327690, 2, 0, 327691, 2, 0, 327692, 2, 0, 327693, 2, 0, 327694, 2, 0, 327695, 2, 0, 327696, 2, 0, 327697, 2, 0, 327698, 2, 0, 327699, 2, 0, 327700, 2, 0, 327701, 2, 0, 327702, 2, 0, 327703, 2, 0, 327704, 2, 0, 327705, 2, 0, 327706, 2, 0, 327707, 2, 0, 327708, 2, 0, 327709, 2, 0, 327710, 2, 0, 327711, 2, 0, 327712, 2, 0, 327713, 2, 0, 327714, 2, 0, 327715, 2, 0, 327716, 2, 0, 327717, 2, 0, 458750, 2, 0, 458751, 2, 0, 393216, 2, 0, 393217, 2, 0, 393218, 2, 0, 393219, 2, 0, 393220, 2, 0, 393221, 2, 0, 393222, 2, 0, 393223, 2, 0, 393224, 2, 0, 393225, 2, 0, 393226, 2, 0, 393227, 2, 0, 393228, 2, 0, 393229, 2, 0, 393230, 2, 0, 393231, 2, 0, 393232, 2, 0, 393233, 2, 0, 393234, 2, 0, 393235, 2, 0, 393236, 2, 0, 393237, 2, 0, 393238, 2, 0, 393239, 2, 0, 393240, 2, 0, 393241, 2, 0, 393242, 2, 0, 393243, 2, 0, 393244, 2, 0, 393245, 2, 0, 393246, 2, 0, 393247, 2, 0, 393248, 2, 0, 393249, 2, 0, 393250, 2, 0, 393251, 2, 0, 393252, 2, 0, 393253, 2, 0, 524286, 2, 0, 524287, 2, 0, 458752, 2, 0, 458753, 2, 0, 458754, 2, 0, 458755, 2, 0, 458756, 2, 0, 458757, 2, 0, 458758, 2, 0, 458759, 2, 0, 458760, 2, 0, 458761, 2, 0, 458762, 2, 0, 458763, 2, 0, 458764, 2, 0, 458765, 2, 0, 458766, 2, 0, 458767, 2, 0, 458768, 2, 0, 458769, 2, 0, 458770, 2, 0, 458771, 2, 0, 458772, 2, 0, 458773, 2, 0, 458774, 2, 0, 458775, 2, 0, 458776, 2, 0, 458777, 2, 0, 458778, 2, 0, 458779, 2, 0, 458780, 2, 0, 458781, 2, 0, 458782, 2, 0, 458783, 2, 0, 458784, 2, 0, 458785, 2, 0, 458786, 2, 0, 458787, 2, 0, 458788, 2, 0, 458789, 2, 0, 589822, 2, 0, 589823, 2, 0, 524288, 2, 0, 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 2, 0, 524294, 2, 0, 524295, 3, 7, 524296, 3, 0, 524297, 3, 0, 524298, 3, 7, 524299, 5, 65554, 524300, 5, 65554, 524301, 3, 7, 524302, 3, 0, 524303, 3, 0, 524304, 3, 7, 524305, 2, 0, 524306, 2, 0, 524307, 3, 7, 524308, 3, 0, 524309, 3, 0, 524310, 3, 7, 524311, 5, 65554, 524312, 5, 65554, 524313, 3, 0, 524314, 3, 0, 524315, 3, 0, 524316, 3, 7, 524317, 2, 0, 524318, 2, 0, 524319, 2, 0, 524320, 2, 0, 524321, 2, 0, 524322, 2, 0, 524323, 2, 0, 524324, 2, 0, 524325, 2, 0, 655358, 2, 0, 655359, 2, 0, 589824, 2, 0, 589825, 2, 0, 589826, 2, 0, 589827, 2, 0, 589828, 2, 0, 589829, 2, 0, 589830, 2, 0, 589831, 3, 7, 589832, 2, 0, 589833, 2, 0, 589834, 3, 7, 589835, 4, 0, 589836, 4, 0, 589837, 3, 7, 589838, 2, 0, 589839, 2, 0, 589840, 3, 7, 589841, 2, 0, 589842, 2, 0, 589843, 3, 7, 589844, 2, 0, 589845, 2, 0, 589846, 3, 7, 589847, 4, 0, 589848, 4, 0, 589849, 4, 0, 589850, 2, 0, 589851, 2, 0, 589852, 3, 7, 589853, 2, 0, 589854, 2, 0, 589855, 2, 0, 589856, 2, 0, 589857, 2, 0, 589858, 2, 0, 589859, 2, 0, 589860, 2, 0, 589861, 2, 0, 720894, 2, 0, 720895, 2, 0, 655360, 2, 0, 655361, 2, 0, 655362, 2, 0, 655363, 2, 0, 655364, 2, 0, 655365, 2, 0, 655366, 2, 0, 655367, 3, 7, 655368, 2, 0, 655369, 2, 0, 655370, 3, 7, 655371, 4, 0, 655372, 4, 0, 655373, 3, 7, 655374, 2, 0, 655375, 2, 0, 655376, 3, 7, 655377, 2, 0, 655378, 2, 0, 655379, 3, 7, 655380, 2, 0, 655381, 2, 0, 655382, 3, 7, 655383, 4, 0, 655384, 4, 0, 655385, 4, 0, 655386, 2, 0, 655387, 2, 0, 655388, 3, 7, 655389, 2, 0, 655390, 2, 0, 655391, 2, 0, 655392, 2, 0, 655393, 2, 0, 655394, 2, 0, 655395, 2, 0, 655396, 2, 0, 655397, 2, 0, 786430, 2, 0, 786431, 2, 0, 720896, 2, 0, 720897, 2, 0, 720898, 2, 0, 720899, 2, 0, 720900, 2, 0, 720901, 2, 0, 720902, 2, 0, 720903, 3, 7, 720904, 3, 0, 720905, 3, 0, 720906, 3, 0, 720907, 4, 0, 720908, 4, 0, 720909, 3, 0, 720910, 3, 0, 720911, 3, 0, 720912, 3, 7, 720913, 2, 0, 720914, 2, 0, 720915, 3, 7, 720916, 3, 0, 720917, 3, 0, 720918, 3, 0, 720919, 4, 0, 720920, 4, 0, 720921, 4, 0, 720922, 3, 65542, 720923, 3, 65542, 720924, 3, 7, 720925, 2, 0, 720926, 2, 0, 720927, 2, 0, 720928, 2, 0, 720929, 2, 0, 720930, 2, 0, 720931, 2, 0, 720932, 2, 0, 720933, 2, 0, 851966, 2, 0, 851967, 2, 0, 786432, 2, 0, 786433, 2, 0, 786434, 2, 0, 786435, 2, 0, 786436, 2, 0, 786437, 2, 0, 786438, 2, 0, 786439, 3, 7, 786440, 4, 0, 786441, 4, 0, 786442, 4, 0, 786443, 4, 0, 786444, 4, 0, 786445, 4, 0, 786446, 4, 0, 786447, 4, 0, 786448, 3, 7, 786449, 2, 0, 786450, 2, 0, 786451, 3, 7, 786452, 4, 0, 786453, 4, 0, 786454, 4, 0, 786455, 4, 0, 786456, 4, 0, 786457, 4, 0, 786458, 4, 0, 786459, 4, 0, 786460, 3, 7, 786461, 2, 0, 786462, 2, 0, 786463, 2, 0, 786464, 2, 0, 786465, 2, 0, 786466, 2, 0, 786467, 2, 0, 786468, 2, 0, 786469, 2, 0, 917502, 2, 0, 917503, 2, 0, 851968, 2, 0, 851969, 2, 0, 851970, 2, 0, 851971, 2, 0, 851972, 2, 0, 851973, 2, 0, 851974, 2, 0, 851975, 3, 7, 851976, 3, 65542, 851977, 3, 65542, 851978, 3, 65542, 851979, 4, 0, 851980, 3, 65542, 851981, 3, 65542, 851982, 3, 65542, 851983, 4, 0, 851984, 3, 7, 851985, 2, 0, 851986, 2, 0, 851987, 3, 7, 851988, 4, 0, 851989, 4, 0, 851990, 4, 0, 851991, 4, 0, 851992, 4, 0, 851993, 3, 65542, 851994, 3, 65542, 851995, 3, 65542, 851996, 3, 7, 851997, 2, 0, 851998, 2, 0, 851999, 2, 0, 852000, 2, 0, 852001, 2, 0, 852002, 2, 0, 852003, 2, 0, 852004, 2, 0, 852005, 2, 0, 983038, 2, 0, 983039, 2, 0, 917504, 2, 0, 917505, 2, 0, 917506, 2, 0, 917507, 2, 0, 917508, 2, 0, 917509, 2, 0, 917510, 2, 0, 917511, 3, 7, 917512, 4, 0, 917513, 4, 0, 917514, 4, 0, 917515, 4, 0, 917516, 4, 0, 917517, 4, 0, 917518, 4, 0, 917519, 4, 0, 917520, 3, 7, 917521, 2, 0, 917522, 2, 0, 917523, 3, 7, 917524, 3, 65542, 917525, 3, 65542, 917526, 3, 65542, 917527, 4, 0, 917528, 4, 0, 917529, 4, 0, 917530, 4, 0, 917531, 4, 0, 917532, 3, 7, 917533, 2, 0, 917534, 2, 0, 917535, 2, 0, 917536, 2, 0, 917537, 2, 0, 917538, 2, 0, 917539, 2, 0, 917540, 2, 0, 917541, 2, 0, 1048574, 2, 0, 1048575, 2, 0, 983040, 2, 0, 983041, 2, 0, 983042, 2, 0, 983043, 2, 0, 983044, 2, 0, 983045, 2, 0, 983046, 2, 0, 983047, 3, 7, 983048, 4, 0, 983049, 4, 0, 983050, 4, 0, 983051, 4, 0, 983052, 4, 0, 983053, 3, 65542, 983054, 3, 65542, 983055, 3, 65542, 983056, 3, 7, 983057, 2, 0, 983058, 2, 0, 983059, 3, 7, 983060, 4, 0, 983061, 4, 0, 983062, 4, 0, 983063, 4, 0, 983064, 4, 0, 983065, 3, 65542, 983066, 3, 65542, 983067, 3, 65542, 983068, 3, 7, 983069, 2, 0, 983070, 2, 0, 983071, 2, 0, 983072, 2, 0, 983073, 2, 0, 983074, 2, 0, 983075, 2, 0, 983076, 2, 0, 983077, 2, 0, 1114110, 2, 0, 1114111, 2, 0, 1048576, 2, 0, 1048577, 2, 0, 1048578, 2, 0, 1048579, 2, 0, 1048580, 2, 0, 1048581, 2, 0, 1048582, 2, 0, 1048583, 3, 7, 1048584, 4, 0, 1048585, 3, 65542, 1048586, 3, 65542, 1048587, 3, 65542, 1048588, 4, 0, 1048589, 4, 0, 1048590, 4, 0, 1048591, 4, 0, 1048592, 3, 7, 1048593, 2, 0, 1048594, 2, 0, 1048595, 3, 7, 1048596, 4, 0, 1048597, 4, 0, 1048598, 3, 65542, 1048599, 3, 65542, 1048600, 3, 65542, 1048601, 4, 0, 1048602, 4, 0, 1048603, 4, 0, 1048604, 3, 7, 1048605, 2, 0, 1048606, 2, 0, 1048607, 2, 0, 1048608, 2, 0, 1048609, 2, 0, 1048610, 2, 0, 1048611, 2, 0, 1048612, 2, 0, 1048613, 2, 0, 1179646, 2, 0, 1179647, 2, 0, 1114112, 2, 0, 1114113, 2, 0, 1114114, 2, 0, 1114115, 2, 0, 1114116, 2, 0, 1114117, 2, 0, 1114118, 2, 0, 1114119, 3, 7, 1114120, 4, 0, 1114121, 4, 0, 1114122, 4, 0, 1114123, 4, 0, 1114124, 4, 0, 1114125, 4, 0, 1114126, 4, 0, 1114127, 4, 0, 1114128, 3, 7, 1114129, 2, 0, 1114130, 2, 0, 1114131, 3, 7, 1114132, 4, 0, 1114133, 4, 0, 1114134, 4, 0, 1114135, 4, 0, 1114136, 4, 0, 1114137, 4, 0, 1114138, 4, 0, 1114139, 4, 0, 1114140, 3, 7, 1114141, 2, 0, 1114142, 2, 0, 1114143, 2, 0, 1114144, 2, 0, 1114145, 2, 0, 1114146, 2, 0, 1114147, 2, 0, 1114148, 2, 0, 1114149, 2, 0, 1245182, 2, 0, 1245183, 2, 0, 1179648, 2, 0, 1179649, 2, 0, 1179650, 2, 0, 1179651, 2, 0, 1179652, 2, 0, 1179653, 2, 0, 1179654, 2, 0, 1179655, 3, 0, 1179656, 3, 0, 1179657, 3, 0, 1179658, 3, 0, 1179659, 3, 0, 1179660, 5, 65538, 1179661, 3, 0, 1179662, 3, 0, 1179663, 3, 0, 1179664, 3, 0, 1179665, 2, 0, 1179666, 2, 0, 1179667, 3, 0, 1179668, 3, 0, 1179669, 3, 0, 1179670, 3, 0, 1179671, 3, 0, 1179672, 5, 65538, 1179673, 3, 0, 1179674, 3, 0, 1179675, 3, 0, 1179676, 3, 0, 1179677, 2, 0, 1179678, 2, 0, 1179679, 2, 0, 1179680, 2, 0, 1179681, 2, 0, 1179682, 2, 0, 1179683, 2, 0, 1179684, 2, 0, 1179685, 2, 0, 1310718, 2, 0, 1310719, 2, 0, 1245184, 2, 0, 1245185, 2, 0, 1245186, 2, 0, 1245187, 2, 0, 1245188, 2, 0, 1245189, 2, 0, 1245190, 2, 0, 1245191, 2, 0, 1245192, 2, 0, 1245193, 2, 0, 1245194, 2, 0, 1245195, 2, 0, 1245196, 2, 0, 1245197, 2, 0, 1245198, 2, 0, 1245199, 2, 0, 1245200, 2, 0, 1245201, 2, 0, 1245202, 2, 0, 1245203, 2, 0, 1245204, 2, 0, 1245205, 2, 0, 1245206, 2, 0, 1245207, 2, 0, 1245208, 2, 0, 1245209, 2, 0, 1245210, 2, 0, 1245211, 2, 0, 1245212, 2, 0, 1245213, 2, 0, 1245214, 2, 0, 1245215, 2, 0, 1245216, 2, 0, 1245217, 2, 0, 1245218, 2, 0, 1245219, 2, 0, 1245220, 2, 0, 1245221, 2, 0, 1376254, 2, 0, 1376255, 2, 0, 1310720, 2, 0, 1310721, 2, 0, 1310722, 2, 0, 1310723, 2, 0, 1310724, 2, 0, 1310725, 2, 0, 1310726, 2, 0, 1310727, 2, 0, 1310728, 2, 0, 1310729, 2, 0, 1310730, 2, 0, 1310731, 2, 0, 1310732, 2, 0, 1310733, 2, 0, 1310734, 2, 0, 1310735, 2, 0, 1310736, 2, 0, 1310737, 2, 0, 1310738, 2, 0, 1310739, 2, 0, 1310740, 2, 0, 1310741, 2, 0, 1310742, 2, 0, 1310743, 2, 0, 1310744, 2, 0, 1310745, 2, 0, 1310746, 2, 0, 1310747, 2, 0, 1310748, 2, 0, 1310749, 2, 0, 1310750, 2, 0, 1310751, 2, 0, 1310752, 2, 0, 1310753, 2, 0, 1310754, 2, 0, 1310755, 2, 0, 1310756, 2, 0, 1310757, 2, 0, 1441790, 2, 0, 1441791, 2, 0, 1376256, 2, 0, 1376257, 2, 0, 1376258, 2, 0, 1376259, 2, 0, 1376260, 2, 0, 1376261, 2, 0, 1376262, 2, 0, 1376263, 2, 0, 1376264, 2, 0, 1376265, 2, 0, 1376266, 2, 0, 1376267, 2, 0, 1376268, 2, 0, 1376269, 2, 0, 1376270, 2, 0, 1376271, 2, 0, 1376272, 2, 0, 1376273, 2, 0, 1376274, 2, 0, 1376275, 2, 0, 1376276, 2, 0, 1376277, 2, 0, 1376278, 2, 0, 1376279, 2, 0, 1376280, 2, 0, 1376281, 2, 0, 1376282, 2, 0, 1376283, 2, 0, 1376284, 2, 0, 1376285, 2, 0, 1376286, 2, 0, 1376287, 2, 0, 1376288, 2, 0, 1376289, 2, 0, 1376290, 2, 0, 1376291, 2, 0, 1376292, 2, 0, 1376293, 2, 0 )

[node name="CanvasModulate" parent="Map" instance=ExtResource( 13 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map"]
visible = false
position = Vector2( 151.159, 323.882 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Map"]
visible = false
position = Vector2( 216.195, 323.882 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Map"]
visible = false
position = Vector2( 167.981, 395.88 )
shape = SubResource( 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Map"]
visible = false
position = Vector2( 232.514, 371.985 )
shape = SubResource( 1 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Map"]
position = Vector2( 343.986, 347.963 )
shape = SubResource( 1 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Map"]
visible = false
position = Vector2( 375.994, 395.929 )
shape = SubResource( 1 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Map"]
visible = false
position = Vector2( 423.96, 324.081 )
shape = SubResource( 1 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Map"]
visible = false
position = Vector2( 424.013, 372.027 )
shape = SubResource( 1 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Map"]
visible = false
position = Vector2( 0.187561, 1.89691 )
scale = Vector2( 0.997086, 0.996454 )
polygon = PoolVector2Array( 144.79, 192.001, 175.824, 191.434, 175.864, 286.735, 127.934, 287.144, 127.997, 431.987, 257.005, 431.889, 256.972, 286.778, 209.218, 287.144, 208.549, 191.21, 272.099, 191.21, 273.27, 454.954, 112.577, 455.704, 112.577, 191.627 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map"]
visible = false
polygon = PoolVector2Array( 338.447, 192.376, 367.289, 192.001, 367.954, 287.684, 320.047, 287.86, 319.871, 432.184, 448.153, 432.035, 448.04, 288.008, 416.135, 287.952, 416.079, 215.734, 400.043, 215.957, 399.877, 192.001, 461.308, 192.751, 463.93, 455.329, 303.985, 455.329, 305.484, 191.627 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="Map"]
visible = false
position = Vector2( 192.104, 184.848 )
shape = SubResource( 2 )

[node name="CollisionShape2D10" type="CollisionShape2D" parent="Map"]
visible = false
position = Vector2( 384.613, 184.848 )
shape = SubResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Map"]
visible = false
position = Vector2( 33.7798, 176.644 )
occluder = SubResource( 3 )

[node name="LightOccluder2D3" type="LightOccluder2D" parent="Map"]
visible = false
position = Vector2( 113.817, 224.857 )
occluder = SubResource( 3 )

[node name="LightOccluder2D4" type="LightOccluder2D" parent="Map"]
visible = false
position = Vector2( 97.5518, 176.644 )
occluder = SubResource( 3 )

[node name="LightOccluder2D2" type="LightOccluder2D" parent="Map"]
visible = false
position = Vector2( 49.6467, 248.764 )
occluder = SubResource( 3 )

[node name="LightOccluder2D5" type="LightOccluder2D" parent="Map"]
visible = false
position = Vector2( 257.709, 247.878 )
occluder = SubResource( 3 )

[node name="LightOccluder2D8" type="LightOccluder2D" parent="Map"]
visible = false
position = Vector2( 451.39, 937.344 )
occluder = SubResource( 3 )

[node name="LightOccluder2D9" type="LightOccluder2D" parent="Map"]
visible = false
position = Vector2( 305.974, 175.623 )
occluder = SubResource( 3 )

[node name="LightOccluder2D7" type="LightOccluder2D" parent="Map"]
visible = false
position = Vector2( 305.974, 224.233 )
occluder = SubResource( 3 )

[node name="LightOccluder2D6" type="LightOccluder2D" parent="Map"]
visible = false
position = Vector2( 226.405, 200.192 )
occluder = SubResource( 3 )

[node name="LightOccluder2D10" type="LightOccluder2D" parent="Map"]
visible = false
occluder = SubResource( 4 )

[node name="LightOccluder2D11" type="LightOccluder2D" parent="Map"]
visible = false
occluder = SubResource( 5 )

[node name="Level_End" type="Area2D" parent="."]
position = Vector2( 104.614, 102.547 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level_End"]
position = Vector2( 112.449, 37.5424 )
shape = SubResource( 6 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Level_End"]
position = Vector2( 303.327, 37.5424 )
shape = SubResource( 6 )

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 225.063, 356.216 )
script = ExtResource( 3 )

[node name="Player2" parent="." instance=ExtResource( 7 )]
position = Vector2( 417.572, 356.216 )

[node name="Mate" type="Area2D" parent="."]
position = Vector2( 432.527, 184.845 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Mate"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mate"]
visible = false
shape = SubResource( 7 )

[node name="Light2D" type="Light2D" parent="Mate"]
position = Vector2( 0.0524902, 0 )
scale = Vector2( 0.145263, 0.133733 )
texture = ExtResource( 5 )
texture_scale = 0.42
color = Color( 0.894118, 0.858824, 0.858824, 1 )
energy = 1.07
shadow_enabled = true
script = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background_Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -19.5
autoplay = true

[node name="Dialogic" type="Node" parent="."]
script = ExtResource( 12 )

[node name="Turns_left" parent="." instance=ExtResource( 10 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 282.962
margin_top = 29.2132
margin_right = 359.962
margin_bottom = 43.2132

[connection signal="body_entered" from="Level_End" to="Level_End" method="_on_Level_End_body_entered"]
[connection signal="body_exited" from="Level_End" to="Level_End" method="_on_Level_End_body_exited"]
[connection signal="body_entered" from="Mate" to="Mate" method="_on_Mate_body_entered"]
